syntax = "proto3";

package greet;

service GreetService{
  rpc Greet (GreetRequest) returns (GreetRespone) {}
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting gereeting = 1;
}

message GreetRespone {
  string result = 1;
}

